# docs/swagger.json
@@ -1122,6 +1122,50 @@
                 }
             }
         },
+        "/user/change-password": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "To do change password user",
+                "parameters": [
+                    {
+                        "description": "json req body",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ChangePassword"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/user/{id}": {
             "get": {
                 "consumes": [
@@ -1335,6 +1379,28 @@
                 },
                 "updateName": {
                     "type": "string"
+                }
+            }
+        },
+        "request.ChangePassword": {
+            "type": "object",
+            "required": [
+                "confirmPasswd",
+                "currentPasswd",
+                "passwd"
+            ],
+            "properties": {
+                "confirmPasswd": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "currentPasswd": {
+                    "type": "string",
+                    "maxLength": 200
+                },
+                "passwd": {
+                    "type": "string",
+                    "maxLength": 200
                 }
             }
         },
